force-app/main/default/objects/CAT_Review__c/CAT_Review__c.object-meta.xml
<CustomObject>
    <label>CAT Review</label>
    <nameField>
        <displayFormat>CR-{0000}</displayFormat>
        <label>CAT Review</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CAT Reviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>