force-app/main/default/objects/CAT_Review__c/fields/Billing_Schedules_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Billing_Schedules_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>RUBX-14 Billing Schedule Confirmed</description>
    <label>Billing Schedules Confirmed</label>
    <type>Checkbox</type>
</CustomField>