force-app/main/default/objects/CAT_Review__c/fields/CAT_Comments__c.field-meta.xml
<CustomField>
    <fullName>CAT_Comments__c</fullName>
    <description>RUBX-15 CAT Comments field added for CAT feedback</description>
    <label>CAT Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>