force-app/main/default/objects/CAT_Review__c/fields/Math_Accuracy_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Math_Accuracy_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>RUBX-13 Math Accuracy Confirmed</description>
    <label>Math Accuracy Confirmed</label>
    <type>Checkbox</type>
</CustomField>