force-app/main/default/objects/CAT_Review__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>RUBX-12 Link to related opportunity</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>CAT Reviews</relationshipLabel>
    <relationshipName>CAT_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>