force-app/main/default/objects/CAT_Review__c/fields/Order_Complete_and_Accurate__c.field-meta.xml
<CustomField>
    <fullName>Order_Complete_and_Accurate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>RUBX-12 Order Complete and Accurate</description>
    <label>Order Complete and Accurate</label>
    <type>Checkbox</type>
</CustomField>