force-app/main/default/objects/CAT_Review__c/fields/Signatures_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Signatures_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>RUBX-15 Signatures Confirmed</description>
    <label>Signatures Confirmed</label>
    <type>Checkbox</type>
</CustomField>