force-app/main/default/objects/CAT_Review__c/fields/Special_Instructions_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Special_Instructions_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>RUBX-16 Special Instructions Confirmed</description>
    <label>Special Instructions Confirmed</label>
    <type>Checkbox</type>
</CustomField>